[package]
name = "bnuuy"
version = "1.0.0"
authors = ["John Gallagher <johnkgallagher@gmail.com>", "Evie"]
edition = "2021"
build = "build.rs"
description = "Pure Rust RabbitMQ client"
repository = "https://github.com/eievui5/bnuuy"
readme = "README.md"
keywords = ["rabbitmq", "amqp"]
categories = ["network-programming", "api-bindings"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

[dependencies]
snafu = { version = "0.7", default-features = false, features = ["std"]}
input_buffer = "0.5"
bytes = "1.4"
amq-protocol = "7.1"
mio = "0.6"
mio-extras = "2.0"
cookie-factory = "0.3"
crossbeam-channel = "0.5"
indexmap = "2.0"
url = "2.4.0"
native-tls = { version = "0.2", optional = true }
percent-encoding = "2.3"
tracing = "0.1.37"

[build-dependencies]
built = "0.6.1"

[dev-dependencies]
uuid = { version = "1.4", features = [ "v4" ] }
mockstream = "0.0.3"
tracing-subscriber = "0.3.17"
